# fundamentus_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  notebook.ipynb  pyproject.toml  requirements.txt
fundamentus_analysis/: __init__.py  get_data.py  test_get_data.py
